[package]
name = "pfp-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "env"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
mosquitto-rs = "0.4.0"
nom = "7.1.2"
reqwest = { version = "0.11.13", features = ["rustls", "json", "deflate"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-serial = "5.4.4"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
